# Micro-ChatGPT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/routes/: auth.py  chat.py  conversations.py  documents.py  history.py
app/core/: config.py  errors.py  logging.py  security.py
app/db/: session.py
app/db/models/: __init__.py  conversation.py  document.py  summary.py  user.py
app/repositories/conversations/: __init__.py  base.py  postgres.py
app/repositories/documents/: __init__.py  base.py  postgres.py
app/schemas/: __init__.py  auth.py  chat.py  common.py  conversation.py  document.py  history.py
app/services/: __init__.py  auth_service.py  chat_service.py  context_manager.py  conversation_service.py  cost_tracker.py  history_service.py  rag_service.py
app/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  llama_provider.py  openai_provider.py
app/utils/: monitoring.py
postman/: aichatbot.postman_collection.json
scripts/db/: 01_create_database.sql  02_schema.sql  03_reset.sql
tests/: conftest.py  test_auth_api.py  test_chat_api.py  test_conversations_api.py  test_services.py
